tests/invalid/invalid-003.inox
Module Invalid003

Main() :
    var X := 10
    X := X bitand "abc"
;
